# code-review-env

./: Dockerfile  README.md  grader.py  inference.py  openenv.yaml  pyproject.toml
fixtures/: easy_pr.json  hard_pr.json  medium_pr.json
server/: app.py  env.py  grader.py  main.py  models.py  requirements.txt
server/tasks/: base_task.py  easy_task.py  hard_task.py  medium_task.py
