[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-review-assistant"
version = "1.0.0"
description = "An OpenEnv environment where an AI agent reviews pull requests and identifies bugs, security vulnerabilities, and code quality issues."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["openenv", "code-review", "ai", "benchmark"]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "openenv>=0.1.13",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.openenv]
name = "code-review-assistant"
version = "1.0.0"
entry_point = "inference.py"
tasks = ["easy-review", "medium-review", "hard-review"]